--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Node.js dependencies and artifacts
-/node_modules
+#/node_modules
 /npm-debug.log*
 /yarn-debug.log*
 /yarn-error.log*
@@ -15,3 +15,4 @@
 
 # IDE + OS junk
 .DS_Store
+node_modules
